--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,21 @@
   margin: 0;
   
  }
+
+ .logo {
+    width: 200px;
+    height: 200px;
+    object-fit: scale-down;
+   
+  
+ }
+
+ /*Footer */
+
+ .footer{
+  color: #fff;
+ }
+ 
   
  /* Container */
   
@@ -75,22 +90,26 @@
  .inner-hero-container{
   position: absolute;
   top: 150px;
-  left: 50px;
+  left: 150px;
+  right: 150px;
   color: white;
-  width: 800px;
+  width: 1500px;
   z-index: 0;
  }
  .hero-title{
-  font-size: 60px;
+  text-align: center;
+  font-size: 80px;
   font-weight: 1000;
   color: white;
+  
 
   /* add text shadow */
-  text-shadow: 2px 2px #000;
+  text-shadow: 5px 5px #000;
  }
  
  .hero-content-paragraph{
-  font-size: 20px;
+
+  text-align: center;
   font-weight: 500;
   color: white;
   font-size: 30px;
@@ -144,17 +163,16 @@
  .sub-section p{
   margin: 0;
   text-decoration: none;
-  color: black
+  color: rgb(255, 255, 255)
  }
   
  .recipe h2{
   margin: 0;
   text-decoration: none;
-  color: black
+  color: rgb(255, 255, 255)
  }
   
  .recipe{
-  background-color: #fff;
   width: 100%;
   gap: 10px;
   padding: 10px;
@@ -181,7 +199,7 @@
  .community-header-title{
   font-size: 40px;
   font-weight: 600;
-  color: #000000;
+  color: #ffffff;
  }
   
  .community-image{
@@ -201,7 +219,7 @@
  .form input{
   width: 100%;
   height: 30px;
-  border: 2px solid #000000;
+  border: 2px solid #ffffff;
   border-radius: 20px;
   font-size: 20px;
   padding: 10px;
@@ -223,12 +241,12 @@
  .community-content p{
   font-size: 20px;
   font-weight: 500;
-  color: #000000;
+  color: #ffffff;
  }
   
  .community-content h3{
   font-size: 40px;
   font-weight: 600;
-  color: #000000;
+  color: #ffffff;
  }
  
