--- a/src/App.css
+++ b/src/App.css
@@ -40,17 +40,8 @@
   text-shadow: 0 0 2px 1 #000;
  }
   
- .header{
-  font-weight: 200;
-  font-size: 20px;
-  color: #000;
-  margin-left: 20px;
- }
-  
- .header h1, .header p {
-  margin: 0;
-  
- }
+
+
 
  .logo {
     width: 200px;
@@ -84,7 +75,7 @@
  }
   
  body{
-  background-color: #013220;
+  background-color: #cea3a3;
  }
   
  .inner-hero-container{
@@ -93,7 +84,7 @@
   left: 150px;
   right: 150px;
   color: white;
-  width: 1500px;
+  width: 1000;
   z-index: 0;
  }
  .hero-title{
@@ -147,7 +138,7 @@
  .element-paragraph{
   font-size: 25px;
   font-weight: 500;
-  color: #fff;
+  color: #000000;
   width: 500px;
  }
 
@@ -163,13 +154,13 @@
  .sub-section p{
   margin: 0;
   text-decoration: none;
-  color: rgb(255, 255, 255)
+  color: rgb(0, 0, 0)
  }
   
  .recipe h2{
   margin: 0;
   text-decoration: none;
-  color: rgb(255, 255, 255)
+  color: rgb(0, 0, 0)
  }
   
  .recipe{
@@ -199,7 +190,7 @@
  .community-header-title{
   font-size: 40px;
   font-weight: 600;
-  color: #ffffff;
+  color: #000000;
  }
   
  .community-image{
@@ -219,7 +210,7 @@
  .form input{
   width: 100%;
   height: 30px;
-  border: 2px solid #ffffff;
+  border: 2px solid #000000;
   border-radius: 20px;
   font-size: 20px;
   padding: 10px;
@@ -230,7 +221,7 @@
   border: 2px solid #000000;
   border-radius: 20px;
   font-size: 15px;
-  background-color: #F5F5F5;
+  background-color: #000000;
  }
   
  .community-content{
@@ -238,15 +229,9 @@
   margin: 0;
  }
   
- .community-content p{
-  font-size: 20px;
-  font-weight: 500;
-  color: #ffffff;
- }
-  
- .community-content h3{
-  font-size: 40px;
+ .community-content h2{
+  font-size: 50px;
   font-weight: 600;
-  color: #ffffff;
+  color: #000000;
  }
  
